download docx and improved UI

--- a/src/scss/_resumeBuilderForm.scss
+++ b/src/scss/_resumeBuilderForm.scss
@@ -1,4 +1,120 @@
 .form-container {
-  height: 500px;
+  padding: 20px;
+  background-color: #fff; // White background for the document
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); // Minor black box shadow
+  .form-group {
+    margin-bottom: 20px;
+
+    label {
+      font-weight: bold;
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      transition: border-color 0.3s ease;
+
+      &:focus {
+        border-color: #007bff; // Focus border color
+        outline: none;
+      }
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="tel"],
+    input[type="password"],
+    textarea {
+      height: 38px;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+  }
+
+  .btn {
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    margin-right: 15px;
+
+    &.btn-primary {
+      background-color: #007bff;
+      color: #fff;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+
+    &.btn-secondary {
+      background-color: #6c757d;
+      color: #fff;
+
+      &:hover {
+        background-color: #5a6268;
+      }
+    }
+
+    &.btn-success {
+      background-color: #28a745;
+      color: #fff;
+
+      &:hover {
+        background-color: #218838;
+      }
+    }
+  }
+}
+
+.preview-container {
+  padding: 20px;
+  background-color: #fff; // White background for the document
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); // Minor black box shadow
+  background-color: #f9f9f9;
+  height: 650px;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 10px; // Width of the scrollbar
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1; // Track color
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #888; // Thumb color
+    border-radius: 5px; // Border radius of the thumb
+  }
+
+  .word-document {
+    padding: 20px;
+    background-color: #fff; // White background for the document
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); // Minor black box shadow
+
+    .header {
+      margin-bottom: 20px;
+
+      h2 {
+        margin-top: 0;
+      }
+
+      hr {
+        border-top: 2px solid #000;
+      }
+    }
+
+    .content {
+      font-family: Arial, sans-serif;
+      font-size: 12px;
+    }
+  }
 }
